--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
-
-@font-face {
-  font-family: "Bangers";
-  src: url("../public/font/Bangers-Regular.ttf");
-}
 
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
@@ -18,3 +15,9 @@
     background-color: #f8f8f8;
   }
 } */
+
+@layer base {
+  body {
+    font-family: "Inter", sans-serif;
+  }
+}
